--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>3.0.2.RELEASE</version>
         </dependency>
 
+		 <dependency>
+            <groupId>com.heroku.sdk</groupId>
+            <artifactId>heroku-jdbc</artifactId>
+            <version>0.1.1</version>
+        </dependency>
 
     </dependencies>
 
