--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:us-cdbr-iron-east-05.cleardb.net
 spring.datasource.username=b6262210b10f55
 spring.datasource.password=2a6a4fea
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travell
+#spring.datasource.username=root1
+#spring.datasource.password=123
+#spring.jpa.hibernate.ddl-auto=update
