--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@
 #spring.datasource.password=2a6a4fea
 #spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travell
-#spring.datasource.username=root1
-#spring.datasource.password=123
-#spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://some-mysql:3306/travell
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travell
 spring.datasource.username=root1
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://some-mysql:3306/travell
+#spring.datasource.username=root1
+#spring.datasource.password=123
+#spring.jpa.hibernate.ddl-auto=update
