--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
                 <version>0.4.11</version>
                 <configuration>
                     <imageName>${project.artifactId}</imageName>
-                    <dockerDirectory>src/Docker</dockerDirectory>
+                    <dockerDirectory>/</dockerDirectory>
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
