--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
+
+### properties for Heroku ###
+
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:us-cdbr-iron-east-05.cleardb.net}:3306/heroku_7fc4b2f1d0c47bf
 #spring.datasource.username=b6262210b10f55
 #spring.datasource.password=2a6a4fea
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travell
-spring.datasource.username=root1
-spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://some-mysql:3306/travell
+### properties for Tomcat ###
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/travell
 #spring.datasource.username=root1
 #spring.datasource.password=123
 #spring.jpa.hibernate.ddl-auto=update
+
+
+### properties for Docker ###
+
+spring.datasource.url=jdbc:mysql://mysqldb/travell
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
